[add] trade order (put) functions;
